unpackaged/main/default/objects/ia_crm__Intacct_User_Dimension__c/ia_crm__Intacct_User_Dimension__c.object-meta.xml
<CustomObject>
    <label>Intacct User Dimension</label>
    <nameField>
        <label>Intacct User Dimension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intacct User Dimensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>