unpackaged/main/default/objects/ia_crm__Intacct_User_Dimension__c/fields/ia_crm__Hidden__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>