unpackaged/main/default/objects/ia_crm__Intacct_User_Dimension__c/fields/ia_crm__Intacct_Entity__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intacct Entity</label>
    <referenceTo>ia_crm__Intacct_Entity__c</referenceTo>
    <relationshipLabel>Intacct User Dimensions</relationshipLabel>
    <relationshipName>Intacct_User_Dimensions</relationshipName>
    <type>Lookup</type>
</CustomField>