unpackaged/main/default/objects/ia_crm__Intacct_User_Dimension__c/fields/ia_crm__Intacct_Id__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Id__c</fullName>
    <label>Intacct Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>