unpackaged/main/default/objects/ia_crm__Intacct_User_Dimension__c/listViews/ia_crm__All.listView-meta.xml
<ListView>
    <fullName>ia_crm__All</fullName>
    <columns>NAME</columns>
    <columns>ia_crm__Intacct_Id__c</columns>
    <columns>ia_crm__Type__c</columns>
    <columns>ia_crm__Intacct_Entity__c</columns>
    <columns>ia_crm__Hidden__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>